tenzir/integration/data/reference/python/test_python_operator_invalid_syntax_in_file/step_00.ref
error: File "<inline>", line 1
    self.original_c = !!
                      ^
SyntaxError: invalid syntax
 = note: python process exited with error